Fixing menu slide bug. Removing overflow sroll

--- a/src/menu/menu.scss
+++ b/src/menu/menu.scss
@@ -29,10 +29,10 @@
   background-color: $black;
   color: $light-blue;
   z-index: 100;
+  transition: all 1s;
 
   &.opened {
     width: rem(160);
-    transition: 1s;
   }
 
   ul {
