--- a/src/modal/modal.scss
+++ b/src/modal/modal.scss
@@ -1,7 +1,7 @@
 .modal {
   position: fixed;
   top: 25%;
-  left: calc(50% - 102px);
+  left: 50%;
   padding: 1em;
   background: #fff;
   z-index: 100;
